Enhanced README.md and updated SPEC.md with comprehensive documentation
Co-authored-by: druminski <4473056+druminski@users.noreply.github.com>